# MachLeData

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  Team01_pitchdeck.pptx  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yaml
apps/: __init__.py  api.py  dashboard.py
configs/: app.yaml  data.yaml  model.yaml  pipeline.yaml
data/: README.md
data/samples/: README.md
docker/: Dockerfile  Dockerfile.airflow  docker-compose.yml
docs/: VERTEX_DEPLOYMENT.md  architecture.md  data.md  gcp_setup.md
scripts/: __init__.py  compile_pipeline.py  deploy_to_endpoint.py  evaluate.py  predict.py  submit_vertex_pipeline.py  train.py
src/machledata/: __init__.py  __main__.py  config.py  data.py  infer.py  metrics.py  model.py  orchestration.py  pipeline_steps.py  train.py
tests/: test_airflow_dag.py  test_api.py  test_data.py  test_infer.py  test_kubeflow_pipeline.py  test_orchestration.py  test_pipeline_steps.py  test_vertex_submit.py
workflows/: __init__.py  airflow_dag.py  kubeflow_pipeline.py
