[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "machledata"
version = "0.1.0"
description = "Course project skeleton for YOLO-based object detection with MLOps practices."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "pydantic",
    "pyyaml",
    "streamlit",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
