[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "machledata"
version = "0.1.0"
description = "Course project skeleton for YOLO-based object detection with MLOps practices."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115,<0.116",
    "google-cloud-bigquery",
    "pydantic",
    "pyyaml",
    "python-multipart",
    "starlette>=0.40,<0.47",
    "streamlit",
    "uvicorn[standard]",
    "numpy",
    "opencv-python",
    "pillow",
    "pandas",
    "plotly",
    "requests",
    "python-dotenv",
    "transformers>=4.30.0",
    "torch",
    "torchvision",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "httpx>=0.27,<0.29",
]
kubeflow = [
    "kfp>=2,<3",
]
vertex = [
    "google-cloud-aiplatform",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
timeout = 10

[tool.setuptools.packages.find]
where = ["src"]
